lab03 working or VM